# vdcp-spoof

./: .gitignore  Cargo.toml  Compilation.md  README.md  TODO.md  buildWin.sh  cargo-in-container.sh  config.yaml  crossShell.nix  flake.nix  shell.nix  testing procedure.md  workspace.code-workspace
.devcontainer/: Dockerfile
cross-compilation/: build.sh  dockerfile
nix/: rust.nix  rust_win.nix  sources.json
public/: config.json
src/: config.rs  main.rs  serial.rs  vdcp.rs  web_server.rs
src/adam/: mod.rs
src/vdcp/: mod.rs  responses.rs  types.rs
