[package]
name = "vdcp-spoof"
version = "0.1.0"
authors = ["faldor20 <eli.jambu@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"

modular-bitfield = "0.11.2"
#nibble = "0.1.0"
serialport = "3.3.0"
flexi_logger = "0.16"
log = "0.4"
simple-error = "0.2.2"
rocket = "0.4.6"
serde_json = "1.0"
crossbeam = "0.8"
rocket_cors = "0.5"

serde = { version = "1.0", features = ["derive"] }

confy = {version = "0.4.0",features = ["yaml_conf"],default-features = false}
ureq="1.5"
itertools = "0.9"
maplit= "1.0"
[patch.crates-io]
confy = { git = 'https://github.com/rust-cli/confy' }
[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]